2010-01-21  Josep Joan Ribas  <jribas@flumotion.com>

	reviewed by: xqueralt

	* flumotion/admin/gtk/componentlist.py:
	Sad component names in the admin component list are red
	Closes #990

2010-01-21  Josep Joan Ribas  <jribas@flumotion.com>

	reviewed by: xqueralt

	* flumotion/component/producers/videotest/wizard.glade:
	* flumotion/component/producers/videotest/wizard_gtk.py:
	* data/image/wizard/Makefile.am:
	* data/image/wizard/pattern_blink.png (added):
	* data/image/wizard/pattern_black.png (added):
	* data/image/wizard/pattern_snow.png (added):
	* data/image/wizard/pattern_smpte.png (added):
	Add pattern example images on the video test source wizard page
	Closes #1092

2010-01-20  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	reviewed by: jribas

	* flumotion/component/muxers/Makefile.am:
	* flumotion/component/muxers/base.py (added):
	* flumotion/component/muxers/muxers.xml:
	* flumotion/component/muxers/wizard_gtk.py (added):
	Added wizard plugin to muxers.
	With them, require the elements the muxer needs when the worker changes
	and don't let the user to go forward if the check fails.
	Closes #855

2010-01-19  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	reviewed by: jribas

	* flumotion/admin/gtk/componentlist.py:
	Add a new column showing the worst message icon from the messages the
	component has.
	Closes #341

2010-01-20  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* data/glade/Makefile.am:
	And another one...

2010-01-20  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* configure.ac:
	Forgot to rename a file to its new name in last commit.

2010-01-20  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	reviewed by: jribas

	* flumotion/admin/assistant/save.py:
	* flumotion/scenario/Makefile.am:
	* flumotion/scenario/loadflow/Makefile.am:
	* flumotion/scenario/loadflow/loadflow.xml:
	* flumotion/scenario/loadflow/wizard_gtk.py:
	* flumotion/scenario/steps/Makefile.am:
	* flumotion/scenario/steps/loadflowstep.py: