@@ -1,3 +1,9 @@
+2010-01-21  Xavier Queralt Mateu  <xqueralt@flumotion.com>
+
+	* flumotion/scenario/steps/conversionsteps.py:
+	Forgot to commit the changes in this step at r8454. This will fetch the
+	muxer plugin and check the elements the muxer needs in the worker side.
+
 2010-01-21  Josep Joan Ribas  <jribas@flumotion.com>
 
 	reviewed by: xqueralt
